update routes and versions from alpha to v1
